# clickup-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCS_MANAGEMENT_TASKS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: example_config.json  quickstart.py
src/: interactive_main.py
src/clickup_mcp/: __init__.py  __main__.py  client.py  config.py  models.py  server.py  tools.py  utils.py
tests/: conftest.py  test_client.py  test_config.py  test_docs_client.py  test_docs_tools.py  test_server.py  test_subtasks.py  test_tools.py  test_user_tools.py  test_utils.py
tests/test_clickup_mcp/: __init__.py  test_client.py  test_config.py  test_docs_client.py  test_tools.py  test_utils.py
